fix max overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,8 @@ html {
 .group:hover div {
   display: block;
 }
+
+html,
+body {
+  overflow: hidden;
+}
